# wiki

brew/: dump.sh  out.txt
dotfiles/: .tmux.conf
excercises/modern-javascript-for-the-impatient/: package-lock.json  package.json
excercises/modern-javascript-for-the-impatient/Natual/: index.test.ts  index.ts
excercises/modern-javascript-for-the-impatient/optionalChain/: index.js  index.test.js
notebook-codes/ica/: pyproject.toml
notebook-codes/ica/ica/maximum_entropy_approximation/: maxium_entropy_approximation.ipynb
notebook-codes/ica/ica/mle/: mle.ipynb
