[tool.poetry]
name = "ica"
version = "0.1.0"
description = ""
authors = ["seiya <seiyab@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
numpy = "^1.22.3"
mypy = "^0.942"
black = "^22.3.0"
matplotlib = "^3.5.1"
jupyterlab = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
